Add hook patterns and talking points to YouTube trends; link colony research from homepage

--- a/index.html
+++ b/index.html
@@ -3591,11 +3591,11 @@
                         <span class="formula-label">Pheromone Decay with Reinforcement</span>
                     </div>
                     <div class="research-stats">
-                        <div class="r-stat"><span class="r-num">5</span><span class="r-label">Agents</span></div>
-                        <div class="r-stat"><span class="r-num">4K+</span><span class="r-label">Signals</span></div>
-                        <div class="r-stat"><span class="r-num">88</span><span class="r-label">Discoveries</span></div>
+                        <div class="r-stat"><span class="r-num">5</span><span class="r-label">Colonies</span></div>
+                        <div class="r-stat"><span class="r-num">15K+</span><span class="r-label">Signals</span></div>
+                        <div class="r-stat"><span class="r-num">340+</span><span class="r-label">Discoveries</span></div>
                     </div>
-                    <a href="/ouroboros/" class="research-link">View Live System →</a>
+                    <a href="colony-research.html" class="research-link">View Live Findings →</a>
                 </div>
 
                 <div class="research-card reveal">
