Add nav bar to all colony pages, remove duplicate YouTube Trends from Research menu

--- a/colony-research.html
+++ b/colony-research.html
@@ -356,5 +356,6 @@
             })
             .catch(e => console.log('Connections data not available'));
     </script>
+<script src="/ouroboros/nav.js"></script>
 </body>
 </html>
