--- a/ouroboros/colony-report-2026-02-13.html
+++ b/ouroboros/colony-report-2026-02-13.html
@@ -270,5 +270,6 @@
             <p style="margin-top: 12px;">🐍 The snake that eats its own tail grows stronger.</p>
         </footer>
     </div>
+<script src="/ouroboros/nav.js"></script>
 </body>
 </html>
