--- a/ouroboros/model-collapse-myth.html
+++ b/ouroboros/model-collapse-myth.html
@@ -329,5 +329,6 @@
             <p>Research by the Ouroboros Colony • <a href="https://aibridges.org">AIBridges.org</a></p>
         </footer>
     </div>
+<script src="/ouroboros/nav.js"></script>
 </body>
 </html>
