--- a/ouroboros/research-paper.html
+++ b/ouroboros/research-paper.html
@@ -830,5 +830,6 @@ function selectQuery(queries, recentEmbeddings) {
             🐍 The snake that eats its own tail grows stronger.
         </p>
     </div>
+<script src="/ouroboros/nav.js"></script>
 </body>
 </html>
